--- a/src/app/shared/nav-header/nav-header.component.html
+++ b/src/app/shared/nav-header/nav-header.component.html
@@ -6,7 +6,7 @@
     <a href="#testimonial">Testimonial</a>
   </nav>
   <div>
-    <img ngSrc="logo.svg" alt="logo" width="120" height="35" priority>
+    <img routerLink="" ngSrc="logo.svg" alt="logo" width="120" height="35" priority>
   </div>
   <div class="profile">
     <div class="initials" (click)="toggleDropdown()">
@@ -24,15 +24,15 @@
           </div>
         </div>
         <div class="content" (click)="accountSettings()">
-          <img ngSrc="setting.svg" width="25" height="25" alt="settings" priority>
+          <img ngSrc="setting.svg" width="25" height="14.2" alt="settings" priority>
           <h4>Account settings</h4>
         </div>
         <div class="content logout" (click)="logout()">
-          <img ngSrc="logout.svg" width="25" height="25" alt="settings" priority>
+          <img ngSrc="logout.svg" width="25" height="14.2" alt="settings" priority>
           <h4>Log out</h4>
         </div>
       </div>
     }
   </div>
-  <img ngSrc="icon-menu.svg" width="25" height="25" class="menu" alt="hamburger-icon" priority>
+  <img ngSrc="icon-menu.svg" width="25" height="14.2" class="menu" alt="hamburger-icon" priority>
 </header>
