object fit defined for images

--- a/src/app/home-listing/properties/properties.component.html
+++ b/src/app/home-listing/properties/properties.component.html
@@ -1,4 +1,5 @@
 <div class="properties">
+  <h2>Real Estate & Homes For Sale</h2>
   @if (isLoading()) {
     <ngx-spinner
       bdColor="rgba(0, 0, 0, 0.8)"
