--- a/src/app/shared/listing-card/listing-card.component.scss
+++ b/src/app/shared/listing-card/listing-card.component.scss
@@ -19,6 +19,7 @@
         img {
             width: 100%;
             height: 100%;
+            object-fit: cover;
             border-radius: 0.625rem 0.625rem 0 0;
 
             &:hover {
