--- a/src/app/shared/listing-card/listing-card.component.scss
+++ b/src/app/shared/listing-card/listing-card.component.scss
@@ -15,16 +15,15 @@
     }
 
     .hero-img {
+        aspect-ratio: 1.017/1 !important;
+        object-fit: contain !important;
+        border-radius: 0.625rem 0.625rem 0 0;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
 
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 0.625rem 0.625rem 0 0;
-
-            &:hover {
-                opacity: 0.5;
-            }
+        &:hover {
+            opacity: 0.4;
         }
     }
 
