--- a/src/app/home-listing/home-listings/home-listings.component.scss
+++ b/src/app/home-listing/home-listings/home-listings.component.scss
@@ -248,6 +248,30 @@
 
     .outlet {
         margin-top: 1.875rem;
+
+        .properties {
+            max-width: 100%;
+            height: auto;
+            padding: 1rem 3rem;
+        
+            h2 {
+                color: $primary;
+                font-size: 1.75rem;
+                margin-bottom: 2rem;
+            }
+        
+            .loading {
+                color: $white;
+                font-size: 1.25rem;
+            }
+        
+            .listings {
+                width: 100%;
+                display: grid;
+                grid-template-columns: repeat(auto-fill, minmax(18.75rem, 1fr));
+                gap: 1rem;
+            }
+        }
     }
 }
 
