--- a/src/app/home-listing/listing-details/listing-details.component.html
+++ b/src/app/home-listing/listing-details/listing-details.component.html
@@ -235,7 +235,7 @@
                                         <p>{{school.funding_type | sentenceCase}} </p> |
                                         <p>Grades {{formatGrades(school.grades)}} </p> |
                                         <p>{{school.distance_in_miles}} miles away</p> |
-                                        <p>{{school.student_count}}</p>
+                                        <p>{{school.student_count}} students</p>
                                         <p>Educational level: {{school.education_levels.join(', ') | sentenceCase}}</p>
                                     </div>
                                 </div>
