width and height removed

--- a/src/app/shared/nav-header/nav-header.component.html
+++ b/src/app/shared/nav-header/nav-header.component.html
@@ -24,11 +24,11 @@
           </div>
         </div>
         <div class="content logout" (click)="logout()">
-          <img ngSrc="logout.svg" width="25" height="14.2" alt="settings" priority>
+          <img src="logout.svg" alt="settings">
           <h4>Log out</h4>
         </div>
       </div>
     }
   </div>
-  <img ngSrc="icon-menu.svg" width="25" height="14.2" class="menu" alt="hamburger-icon" priority>
+  <img src="icon-menu.svg" class="menu" alt="hamburger-icon">
 </header>
