--- a/src/app/shared/nav-header/nav-header.component.scss
+++ b/src/app/shared/nav-header/nav-header.component.scss
@@ -71,11 +71,11 @@ header {
 
         .dropdown {
             position: absolute;
-            right: 4px;
-            top: 10%;
+            right: 0.25rem;
+            top: 7%;
             z-index: 100;
             background-color: $white;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+            box-shadow: 0 0.25rem 0.5rem rgba(0,0,0,0.4);
             width: 18.75rem;
             border: none;
             border-radius: 0.5rem;
@@ -87,7 +87,7 @@ header {
                 gap: 0.625rem;
                 padding: 0.5rem 1rem;
                 cursor: pointer;
-                border-bottom: 1px solid rgb(192, 191, 191);
+                border-bottom: 1px solid #c0bfbf;
 
                 .name {
                     width: 2.5rem;
