--- a/src/app/shared/listing-card/listing-card.component.scss
+++ b/src/app/shared/listing-card/listing-card.component.scss
@@ -2,12 +2,11 @@
 
 .listing-card {
     border: none;
-    display: flex;
-    flex-direction: column;
+    @include flex-column;
     border-radius: 0.625rem 0.625rem 0 0;
     transition: all .3s ease;
     cursor: pointer;
-    box-shadow: 0 2px 2px rgba(0,0,0,0.1);
+    box-shadow: var(--box-shadow);
     position: relative;
 
     &:active, &:hover {
@@ -60,24 +59,29 @@
 
     .card-content {
         width: 100%;
-        background-color: $white;
+        background-color: var(--background-color);
         border: none;
         padding: 1rem 0.875rem;
-        display: flex;
-        flex-direction: column;
+        @include flex-column;
         gap: 0.625rem;
 
         h6 {
             font-weight: 700;
             font-size: 0.875rem;
+            color: var(--color);
         }
 
         .street {
             @include flex-center;
             gap: 0.625rem;
 
+            img {
+                filter: var(--filter);
+            }
+
             p {
                font-weight: 500; 
+               color: var(--color);
             }
         }
 
@@ -94,10 +98,18 @@
                 @include flex-center;
                 gap: 0.5rem; 
                 padding: 0 0.625rem;
-                border-right: 1px solid $secondary;
+                border-right: 1px solid var(--color);
 
                 &:last-child {
                     border-right: none;
+                }
+
+                img {
+                    filter: var(--filter);
+                }
+
+                p {
+                    color: var(--color);
                 }
             }
         }
