unused class removed

--- a/src/app/home-listing/home-listings/home-listings.component.html
+++ b/src/app/home-listing/home-listings/home-listings.component.html
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="home-type status">
-            <div (click)="toggleDropdown('homeType')" class="bed-bath-content status-content">
+            <div (click)="toggleDropdown('homeType')" class="status-content">
                 <p>Home Type</p>
                 <img ngSrc="chevron-down.svg" width="25" height="25" alt="chevron-down" priority>
             </div>
