route changed to listings

--- a/src/app/landing-page/discover/discover.component.html
+++ b/src/app/landing-page/discover/discover.component.html
@@ -9,7 +9,7 @@
             Whether you're looking for a cozy apartment in the city or a spacious house in the suburbs, <br>
             we have something for everyone. Start your journey towards finding your dream home today.
         </p>
-        <button routerLink="/properties" type="button" class="btn">
+        <button routerLink="/listings" type="button" class="btn">
             View Properties
             <img src="black-right-arrow.svg" alt="right-arrow">
         </button>
