theme switcher component added in the template

--- a/src/app/shared/nav-header/nav-header.component.html
+++ b/src/app/shared/nav-header/nav-header.component.html
@@ -4,6 +4,7 @@
     <a href="#about_us">About us</a>
     <a href="#listing">Listing</a>
     <a href="#testimonial">Testimonial</a>
+    <app-theme-switcher/>
   </nav>
   <div>
     <img routerLink="" ngSrc="logo.svg" alt="logo" width="120" height="35" priority>
